--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
     </header>
 
-    <main class="main" style="background: url('hero-img.png') no-repeat fixed center; background-size: cover;">
+    <main class="main" style="background: url('hero-img.png') no-repeat fixed center; background-size: auto;">
       <!-- Hero Section -->
       <section id="hero" class="hero section">
         <div class="container" data-aos="fade-up" data-aos-delay="100">
